--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "ODMxOTQ0NDE4MjczNTI1ODAw.YHcmng.vB0rSqrr8L-bj-PU52eT64fzx-U",
-    "prefix": ">",
-    "ServerID": "821551527217987584"
+    "token": "<TOKEN>",
+    "prefix": "<PREFIX>",
+    "ServerID": "<SERVER ID>"
 }   
